# sssh

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: check.yml
src/: error.rs  main.rs  panic_hook.rs  settings.rs  utils.rs
src/subcommands/: config.rs  edit.rs  mod.rs  sample.rs  script.rs  select.rs  sssh.sh  sssh.toml
